pdxroasters-static/css/style.css
/* ... */
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
.invisible { visibility: hidden; }
.clearfix:before, .clearfix:after { content: ""; }
.clearfix:after { clear: both; }
.clearfix { *zoom: 1; }
.first{float:left;}
.two_column{width:45%;margin-right:10%;float:left;}
.last{margin-right:0 !important;}
.right{float:right;}
.left{float:left;}
/*
.transition_short{  -webkit-transition:all 100ms linear; -moz-transition:all 100ms linear; -o-transition:all 100ms linear; transition:all 100ms linear;  }
.transition{  -webkit-transition:all 300ms ease-in-out; -moz-transition:all 300ms ease-in-out; -o-transition:all 300ms ease-in-out; transition:all 300ms ease-in-out;  }
*/
.align_right{ float: right;display: inline; text-align: right;}

/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
/* - - - - - - - - - - Typography - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */

body{margin:0;min-height:100%;font-size:16px;font-family:'DIN',Helvetica, Arial, Sans;}

header {
  position:absolute; 
  top:0; 
  left:0; 
  right:0; 
  padding: 10px 0 0 0; 
  background-color:white; 
  z-index:4; 
  width:100%;
  max-width:100%;
  overflow:hidden;}

h1{
  font: normal 700 1.5em/1.5em 'DIN', Helvetica, Arial, Sans;
  letter-spacing:2px;
  color:#333;
  margin-top:1.2em;
  margin-bottom:1em;
  margin-left:32px;
  cursor:default;
}  

h2{
  font: normal 700 2em/2em 'DIN', Helvetica, Arial, Sans;
  margin: .5em 0 0 0;
  color:#323232;
  letter-spacing:1px;
  }

h3{
  font: normal 400 1.5em/1.5em 'DIN', Helvetica, Arial, Sans;
  margin: .5em 0 .5em 0;
  color:#323232;
  letter-spacing:1px;
}

p {font: normal 400 1em/2em 'DIN', Helvetica, Arial, Sans; margin-bottom: 2em;}

p.skolar {font: normal 400 1em/2em 'Skolar', Helvetica, Arial, Sans;}

a { color: #111;}

a:visited { color: #444; }

a:hover { color: #000; }

a:focus { outline: thin dotted; }

a:hover, a:active { outline: 0; }

b, strong { font-weight: bold; }

blockquote { margin: 1em 40px; }

p a{ text-decoration:none; border-bottom: 1px dotted #0099ff; }

p.caption{color:#bebebe; font-style:italic;}

/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
/* - - - - - - - - - - Navigation  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */

nav{
  position:absolute; 
  top:3em; 
  right:-344px;
  overflow:hidden; 
  height:32px;
  }

nav.active{
  right:40px;
  }

nav, nav.active{
  -webkit-transition:all 300ms ease-in-out;
     -moz-transition:all 300ms ease-in-out;
      -ms-transition:all 300ms ease-in-out;
       -o-transition:all 300ms ease-in-out;
          transition:all 300ms ease-in-out;
  -webkit-transform:translateZ(0);
     -moz-transform:translateZ(0);
      -ms-transform:translateZ(0);
       -o-transform:translateZ(0);
          transform:translateZ(0);
  -webkit-transition-delay: 200ms;
     -moz-transition-delay: 200ms;
      -ms-transition-delay: 200ms;
       -o-transition-delay: 200ms;
          transition-delay: 200ms;
}

  
  nav a{
    font: normal 400 1em/1.25em 'DIN', Helvetica, Arial, Sans;
    letter-spacing:1px;
    color:#333333;
    text-transform:uppercase;
    text-align:right;
    margin-left:32px;
    text-decoration:none;
  }

    #plus{
      display:inline-block;
      background:transparent url('../img/plusthin.png') top left no-repeat;
      width:22px;
      height:22px;
      vertical-align:1px;
      margin-right:20px;
    }
    #plus.active{
      -webkit-transform: rotate(-225deg);
         -moz-transform: rotate(-225deg);
          -ms-transform: rotate(-225deg);  
           -o-transform: rotate(-225deg); 
              transform: rotate(-225deg);
    }
    #plus.active, #plus{ 

     -webkit-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
        -moz-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
         -ms-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
          -o-transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000); 
             transition: all 400ms cubic-bezier(0.095, 0.910, 0.245, 1.000);
    }

#active_underline{ height:2px; border-bottom: 2px dashed #0099ff; position:absolute; top:27px; right:0; width:0;}

  #active_underline.nav1{ width:115px; right:207px;}
  #active_underline.nav2{ width:54px;  right:116px;}
  #active_underline.nav3{ width:73px; right:2px;}

/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
/* - - - - - - - - - - InfoPanels  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */

#info_panel{
  position:absolute;
  top:66px;
  padding:0;
  left:0;
  z-index:3;
  width:100%;
  height:37px;
  background-color:#f0f0f0;
  overflow:hidden;
}

#info_panel.active{height:auto;min-height:800px;}

#info_panel, #info_panel.active, #info_wrapper, #new_roaster, .nav1, .nav2, .nav3, #active_underline{
    -webkit-transform:translateZ(0);
     -moz-transform:translateZ(0);
      -ms-transform:translateZ(0);
       -o-transform:translateZ(0);
          transform:translateZ(0);
    -webkit-transition:all 300ms ease-in-out;
     -moz-transition:all 300ms ease-in-out;
       -o-transition:all 300ms ease-in-out;
          transition:all 300ms ease-in-out;
        }

#info_wrapper{
  position:absolute;
  top:99px;
  left:0;
  background-color:#f0f0f0;
  z-index:4;
  overflow:auto;
}

#info_panel #new_roaster{
  opacity:0;
}
/* ... */

